--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,9 @@
 services:
   rails:
     build: ./
+    env_file: ./.env
     environment:
       DB_HOST: db
-      DB_USER: ${DB_USER}
-      DB_PASSWORD: ${DB_PASSWORD}
-      DB_PORT: ${DB_PORT}
       BUNDLE_PATH: /bundle/vendor
     ports:
       - "3000:3000"
